--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix && prettier --write .",
+    "format": "prettier --write .",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -58,18 +60,24 @@
   },
   "devDependencies": {
     "@commitlint/cli": "19.5.0",
-    "@eslint/js": "9.13.0",
+    "@eslint/js": "^9.14.0",
     "@tailwindcss/forms": "0.5.9",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@typescript-eslint/parser": "^8.13.0",
     "@vitejs/plugin-react": "4.3.3",
     "autoprefixer": "10.4.20",
-    "eslint": "9.13.0",
-    "eslint-plugin-react-hooks": "5.0.0",
-    "eslint-plugin-react-refresh": "0.4.14",
+    "eslint": "^9.14.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "lint-staged": "15.2.10",
     "postcss": "8.4.47",
-    "prettier": "3.3.3",
+    "prettier": "^3.3.3",
     "tailwindcss": "3.4.14",
     "typescript": "5.6.3",
     "typescript-eslint": "8.10.0",
