Updated env var setup

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -27,6 +27,7 @@
       "app/*": ["src/app/*"],
       "components/*": ["src/components/*"],
       "hooks/*": ["src/hooks/*"],
+      "*": ["node_modules/*"],
       "@/*": ["./src/*"]
     }
   },
