--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "globals": "^15.12.0",
     "lint-staged": "15.2.10",
     "postcss": "8.4.47",
     "prettier": "^3.3.3",
