--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -10,8 +10,7 @@
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
-    "composite": true,
-    "noEmit": false,
+    "noEmit": true,
 
     /* Linting */
     "strict": true,
