--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "lint": "ESLINT_USE_FLAT_CONFIG=true eslint .",
     "lint:fix": "ESLINT_USE_FLAT_CONFIG=true eslint . --fix && prettier --write .",
     "format": "prettier --write .",
